{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 68,
  "lineage": "982e7efc-3c45-f73a-0b0a-24c95054e6b3",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "web_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/Prakash-rg-zcqrja/providers/Microsoft.Network/loadBalancers/lb-weblb/frontendIPConfigurations/web-lb-publicip-1",
                "name": "web-lb-publicip-1",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/Prakash-rg-zcqrja/providers/Microsoft.Network/publicIPAddresses/lb-publicip"
              }
            ],
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/Prakash-rg-zcqrja/providers/Microsoft.Network/loadBalancers/lb-weblb",
            "location": "eastus2",
            "name": "lb-weblb",
            "resource_group_name": "Prakash-rg-zcqrja",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.web_loadblance_pub_ip",
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "web_lb_backend_address_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/Prakash-rg-zcqrja/providers/Microsoft.Network/loadBalancers/lb-weblb/backendAddressPools/web-backend",
            "loadbalancer_id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/Prakash-rg-zcqrja/providers/Microsoft.Network/loadBalancers/lb-weblb",
            "name": "web-backend"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_public_ip.web_loadblance_pub_ip",
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "web_lb_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/Prakash-rg-zcqrja/providers/Microsoft.Network/loadBalancers/lb-weblb/probes/tcp-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/Prakash-rg-zcqrja/providers/Microsoft.Network/loadBalancers/lb-weblb",
            "name": "tcp-probe",
            "number_of_probes": 2,
            "port": 80,
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_public_ip.web_loadblance_pub_ip",
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "web_lb_rule_app1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/Prakash-rg-zcqrja/providers/Microsoft.Network/loadBalancers/lb-weblb/backendAddressPools/web-backend"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/Prakash-rg-zcqrja/providers/Microsoft.Network/loadBalancers/lb-weblb/frontendIPConfigurations/web-lb-publicip-1",
            "frontend_ip_configuration_name": "web-lb-publicip-1",
            "frontend_port": 80,
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/Prakash-rg-zcqrja/providers/Microsoft.Network/loadBalancers/lb-weblb/loadBalancingRules/web-app1-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/Prakash-rg-zcqrja/providers/Microsoft.Network/loadBalancers/lb-weblb",
            "name": "web-app1-rule",
            "probe_id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/Prakash-rg-zcqrja/providers/Microsoft.Network/loadBalancers/lb-weblb/probes/tcp-probe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_lb_backend_address_pool.web_lb_backend_address_pool",
            "azurerm_lb_probe.web_lb_probe",
            "azurerm_public_ip.web_loadblance_pub_ip",
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "bastion_host_linuxvm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/Prakash-rg-zcqrja/providers/Microsoft.Network/networkInterfaces/bastion-host-linuxvm-nic",
            "internal_domain_name_suffix": "3qfncsshnn5erngc1q2zx0jkmd.cx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "bastion-host-ip",
                "primary": true,
                "private_ip_address": "10.0.100.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/Prakash-rg-zcqrja/providers/Microsoft.Network/publicIPAddresses/bastion-host-publicip",
                "subnet_id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/Prakash-rg-zcqrja/providers/Microsoft.Network/virtualNetworks/vnet-rg/subnets/bastionsubnet"
              }
            ],
            "location": "eastus2",
            "name": "bastion-host-linuxvm-nic",
            "private_ip_address": "10.0.100.4",
            "private_ip_addresses": [
              "10.0.100.4"
            ],
            "resource_group_name": "Prakash-rg-zcqrja",
            "tags": {
              "RG": "Prakash-rg-zcqrja",
              "environment": "terraform",
              "owners": "Prakash",
              "source": "azuredevops"
            }
          },
          "dependencies": [
            "azurerm_public_ip.bastion_host_publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web_linuxvm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/Prakash-rg-zcqrja/providers/Microsoft.Network/networkInterfaces/web-linixvm-nic-0",
            "internal_domain_name_suffix": "3qfncsshnn5erngc1q2zx0jkmd.cx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "web-linic-vm-ipconf",
                "primary": true,
                "private_ip_address": "10.0.11.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/Prakash-rg-zcqrja/providers/Microsoft.Network/virtualNetworks/vnet-rg/subnets/vnet-rg-appsubnet"
              }
            ],
            "location": "eastus2",
            "name": "web-linixvm-nic-0",
            "private_ip_address": "10.0.11.4",
            "private_ip_addresses": [
              "10.0.11.4"
            ],
            "resource_group_name": "Prakash-rg-zcqrja",
            "tags": {
              "RG": "Prakash-rg-zcqrja",
              "environment": "terraform",
              "owners": "Prakash",
              "source": "azuredevops"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/Prakash-rg-zcqrja/providers/Microsoft.Network/networkInterfaces/web-linixvm-nic-1",
            "internal_domain_name_suffix": "3qfncsshnn5erngc1q2zx0jkmd.cx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "web-linic-vm-ipconf",
                "primary": true,
                "private_ip_address": "10.0.11.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/Prakash-rg-zcqrja/providers/Microsoft.Network/virtualNetworks/vnet-rg/subnets/vnet-rg-appsubnet"
              }
            ],
            "location": "eastus2",
            "name": "web-linixvm-nic-1",
            "private_ip_address": "10.0.11.6",
            "private_ip_addresses": [
              "10.0.11.6"
            ],
            "resource_group_name": "Prakash-rg-zcqrja",
            "tags": {
              "RG": "Prakash-rg-zcqrja",
              "environment": "terraform",
              "owners": "Prakash",
              "source": "azuredevops"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/Prakash-rg-zcqrja/providers/Microsoft.Network/networkInterfaces/web-linixvm-nic-2",
            "internal_domain_name_suffix": "3qfncsshnn5erngc1q2zx0jkmd.cx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "web-linic-vm-ipconf",
                "primary": true,
                "private_ip_address": "10.0.11.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/Prakash-rg-zcqrja/providers/Microsoft.Network/virtualNetworks/vnet-rg/subnets/vnet-rg-appsubnet"
              }
            ],
            "location": "eastus2",
            "name": "web-linixvm-nic-2",
            "private_ip_address": "10.0.11.5",
            "private_ip_addresses": [
              "10.0.11.5"
            ],
            "resource_group_name": "Prakash-rg-zcqrja",
            "tags": {
              "RG": "Prakash-rg-zcqrja",
              "environment": "terraform",
              "owners": "Prakash",
              "source": "azuredevops"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "web_nic_lb_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/Prakash-rg-zcqrja/providers/Microsoft.Network/loadBalancers/lb-weblb/backendAddressPools/web-backend",
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/Prakash-rg-zcqrja/providers/Microsoft.Network/networkInterfaces/web-linixvm-nic-0/ipConfigurations/web-linic-vm-ipconf|/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/Prakash-rg-zcqrja/providers/Microsoft.Network/loadBalancers/lb-weblb/backendAddressPools/web-backend",
            "ip_configuration_name": "web-linic-vm-ipconf",
            "network_interface_id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/Prakash-rg-zcqrja/providers/Microsoft.Network/networkInterfaces/web-linixvm-nic-0"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_lb_backend_address_pool.web_lb_backend_address_pool",
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_public_ip.web_loadblance_pub_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/Prakash-rg-zcqrja/providers/Microsoft.Network/loadBalancers/lb-weblb/backendAddressPools/web-backend",
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/Prakash-rg-zcqrja/providers/Microsoft.Network/networkInterfaces/web-linixvm-nic-1/ipConfigurations/web-linic-vm-ipconf|/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/Prakash-rg-zcqrja/providers/Microsoft.Network/loadBalancers/lb-weblb/backendAddressPools/web-backend",
            "ip_configuration_name": "web-linic-vm-ipconf",
            "network_interface_id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/Prakash-rg-zcqrja/providers/Microsoft.Network/networkInterfaces/web-linixvm-nic-1"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_lb_backend_address_pool.web_lb_backend_address_pool",
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_public_ip.web_loadblance_pub_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/Prakash-rg-zcqrja/providers/Microsoft.Network/loadBalancers/lb-weblb/backendAddressPools/web-backend",
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/Prakash-rg-zcqrja/providers/Microsoft.Network/networkInterfaces/web-linixvm-nic-2/ipConfigurations/web-linic-vm-ipconf|/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/Prakash-rg-zcqrja/providers/Microsoft.Network/loadBalancers/lb-weblb/backendAddressPools/web-backend",
            "ip_configuration_name": "web-linic-vm-ipconf",
            "network_interface_id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/Prakash-rg-zcqrja/providers/Microsoft.Network/networkInterfaces/web-linixvm-nic-2"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_lb_backend_address_pool.web_lb_backend_address_pool",
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_public_ip.web_loadblance_pub_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "bastion_vm_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/Prakash-rg-zcqrja/providers/Microsoft.Network/networkInterfaces/bastion-host-linuxvm-nic|/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/Prakash-rg-zcqrja/providers/Microsoft.Network/networkSecurityGroups/bastion-nsg",
            "network_interface_id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/Prakash-rg-zcqrja/providers/Microsoft.Network/networkInterfaces/bastion-host-linuxvm-nic",
            "network_security_group_id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/Prakash-rg-zcqrja/providers/Microsoft.Network/networkSecurityGroups/bastion-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.bastion_host_linuxvm_nic",
            "azurerm_network_security_group.bastion_nsg",
            "azurerm_public_ip.bastion_host_publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "app_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/Prakash-rg-zcqrja/providers/Microsoft.Network/networkSecurityGroups/vnet-rg-appsubnet-nsg",
            "location": "eastus2",
            "name": "vnet-rg-appsubnet-nsg",
            "resource_group_name": "Prakash-rg-zcqrja",
            "security_rule": [
              {
                "access": "Allow",
                "description": "Inbound Rule 0",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "inbound-rule-0",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Inbound Rule 1",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "inbound-rule-1",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Inbound Rule 2",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "inbound-rule-2",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Inbound Rule 3",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "inbound-rule-3",
                "priority": 103,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "bastion_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/Prakash-rg-zcqrja/providers/Microsoft.Network/networkSecurityGroups/bastion-nsg",
            "location": "eastus2",
            "name": "bastion-nsg",
            "resource_group_name": "Prakash-rg-zcqrja",
            "security_rule": [
              {
                "access": "Allow",
                "description": "Inbound Rule 0",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "inbound-rule-0",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Inbound Rule 1",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "inbound-rule-1",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Inbound Rule 2",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "inbound-rule-2",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastion_host_publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/Prakash-rg-zcqrja/providers/Microsoft.Network/publicIPAddresses/bastion-host-publicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.79.33.81",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "bastion-host-publicip",
            "resource_group_name": "Prakash-rg-zcqrja",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "RG": "Prakash-rg-zcqrja",
              "environment": "terraform",
              "owners": "Prakash",
              "source": "azuredevops"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web_loadblance_pub_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/Prakash-rg-zcqrja/providers/Microsoft.Network/publicIPAddresses/lb-publicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.79.33.124",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "lb-publicip",
            "resource_group_name": "Prakash-rg-zcqrja",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "RG": "Prakash-rg-zcqrja",
              "environment": "terraform",
              "owners": "Prakash",
              "source": "azuredevops"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "appsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.11.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/Prakash-rg-zcqrja/providers/Microsoft.Network/virtualNetworks/vnet-rg/subnets/vnet-rg-appsubnet",
            "name": "vnet-rg-appsubnet",
            "resource_group_name": "Prakash-rg-zcqrja",
            "virtual_network_name": "vnet-rg"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastionsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.100.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/Prakash-rg-zcqrja/providers/Microsoft.Network/virtualNetworks/vnet-rg/subnets/bastionsubnet",
            "name": "bastionsubnet",
            "resource_group_name": "Prakash-rg-zcqrja",
            "virtual_network_name": "vnet-rg"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "app_subnet_nsg_associaten",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/Prakash-rg-zcqrja/providers/Microsoft.Network/virtualNetworks/vnet-rg/subnets/vnet-rg-appsubnet",
            "network_security_group_id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/Prakash-rg-zcqrja/providers/Microsoft.Network/networkSecurityGroups/vnet-rg-appsubnet-nsg",
            "subnet_id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/Prakash-rg-zcqrja/providers/Microsoft.Network/virtualNetworks/vnet-rg/subnets/vnet-rg-appsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.app_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "4ad10aec-6b47-487e-b4c2-dc399be92a63",
            "id": "/subscriptions/7500af1f-cee3-4cda-bd1a-6909b5ebb806/resourceGroups/Prakash-rg-zcqrja/providers/Microsoft.Network/virtualNetworks/vnet-rg",
            "location": "eastus2",
            "name": "vnet-rg",
            "resource_group_name": "Prakash-rg-zcqrja"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    }
  ]
}